<resources>

    <string name="app_name">GydeAlpha</string>
    <string name="title_home">gyde</string>
    <string name="title_notes">Notes</string>
    <string name="title_meetings">Meetings</string>
    <string name="title_profile">Profile</string>
    <string name="title_more">More</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_s_your_name">What\'s Your Name?</string>
    <string name="a_users_profile_picture">A users profile picture</string>


    <string-array name="universities">
        <item>The University of Texas Rio Grande Valley</item>
        <item>Texas Southmost College</item>
    </string-array>


    <string-array name="majors">
        <item>Accountancy</item>
        <item>Economics</item>
        <item>Entrepreneurship</item>
        <item>Finance</item>
        <item>Hospitality and Tourism Management</item>
        <item>Information Systems</item>
        <item>International Business</item>
        <item>Management</item>
        <item>Marketing</item>
        <item>Materials Management and Logistics</item>

        <item>Business Administration</item>
        <item>Global Logistics</item>
        <item>Human Resource Management</item>
        <item>Pre-MBA</item>
        <item>Sustainable Supply Chain Management</item>

        <item>Early Care and Early Childhood</item>
        <item>Elementary Education</item>

        <item>All-level/Secondary Education</item>
        <item>Early Care and Early Childhood Studies</item>
        <item>Educational Technology</item>
        <item>Leadership Studies</item>
        <item>Reading</item>
        <item>Secondary Bilingual Education</item>
        <item>Special Education</item>
        <item>Technology Education and Corporate Training</item>

        <item>Civil Engineering</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Electrical Engineering</item>
        <item>Engineering Technology</item>
        <item>Manufacturing Engineering</item>
        <item>Mechanical Engineering</item>

        <item>Engineering Physics</item>
    </string-array>


    <string-array name="topics_basic">
        <item>Nutrition</item>
        <item>Physical Wellness</item>
        <item>Spirituality</item>
        <item>The Arts</item>
        <item>Student Life</item>
        <item>Personal Finance</item>
    </string-array>

    <string-array name="settings">
        <item>About</item>
        <item>Logout</item>
        <item>Report an issue</item>
    </string-array>

</resources>
